welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:3: error: expected start of definition
override def run() {
         ^PictureMono2:5: error: Missing closing brace `}' assumed here
def faireV() {
^PictureMono2:27: error: expected class or object definition
for (tour<- 1 to 4) { faireV() 
^